# batch_sqlinsert

./: Cargo.toml  README.md
src/: batcher.rs  lib.rs
