[package]
name = "batch_sqlinsert"
version = "0.1.0"
authors = ["Daniel Gibson <j.daniel.gibson@gmail.com>"]

[dependencies.postgres]
version = "0.15"
features = ["with-chrono"]

[dependencies]
postgres-derive = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
